# data-schema-isolation

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-checks.yml
example/: __init__.py  isolated.py
tests/: data.csv  test_isolated.py
